<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SettingsActivity">

    <ScrollView
        android:id="@+id/view_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_selected_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/route_pref_title"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_selected_route_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_selected_default"
                android:textSize="14sp"
                android:layout_marginStart="70dp"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="name.jdstew.uphillahead.SettingsFragment"
                tools:layout="@layout/fragment_settings" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/btn_about_title" />

            <Button
                android:id="@+id/btn_legal"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/btn_legal_title" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>